lesson 3 fix